--- a/index.html
+++ b/index.html
@@ -236,6 +236,13 @@
             }
         }
     </style>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TGGJC6546"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){ dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-7TGGJC6546');
+    </script>
 </head>
 <body>
     <div class="container">
