--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>3-Minute Algorithm Tax Assessment</h1>
+            <h1>3-Minute Algorithm Health Calculator</h1>
             <p>Discover how vulnerable your GTM strategy is to platform dependency and algorithm changes</p>
             <div style="background: rgba(102, 126, 234, 0.1); padding: 15px; border-radius: 10px; margin-top: 20px;">
                 <p style="color: #667eea; font-weight: 600;">✓ Industry-benchmarked scoring | ✓ Instant personalized report | ✓ Actionable recommendations</p>
